--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="box"></div>
+    <!-- h${Heading $}*3 -->
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis at officia doloremque sit explicabo, officiis magni praesentium repudiandae blanditiis deleniti doloribus aliquid veniam, ducimus aut? Tempore quibusdam delectus nam dolores corporis cupiditate exercitationem ex cumque animi voluptatibus. Optio rem quae sint consequatur recusandae modi vero, reiciendis accusamus aperiam laboriosam ipsam!.</p>
 </body>
 </html>
