--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- TODO: jlksdjflskdjfldksjfslk-->
-    <!-- FIXME: -->
-    <div class="hero">
-
-    </div>
+    <div class="box"></div>
 </body>
 </html>
