--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Heading 1</h1>
+    <!-- <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -20,6 +20,7 @@
         perspiciatis debitis ipsum saepe asperiores hic! Assumenda maiores a at sequi. A assumenda 
         minima dolores eius delectus velit aperiam quis unde harum totam corporis officiis non 
         soluta enim voluptate quisquam, quod saepe?
-    </p>
+    </p> -->
+    <a href="#" class="link-arrow">Learn more</a>
 </body>
 </html>
