--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
@@ -21,6 +21,10 @@
         minima dolores eius delectus velit aperiam quis unde harum totam corporis officiis non 
         soluta enim voluptate quisquam, quod saepe?
     </p> -->
-    <a href="#" class="link-arrow">Learn more</a>
+    <!-- <a href="#" class="link-arrow">Learn more</a> -->
+
+
+    <span class="badge badge--primary">10% off</span>
+    <span class="badge badge--secondary badge--small">10% off</span>
 </body>
 </html>
