--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- <span class="badge badge--primary">10% off</span>
     <span class="badge badge--secondary badge--small">10% off</span> -->
 
-    <ul class="list list--inline">
+    <!-- <ul class="list list--inline">
         <li class="list__item">Item 1</li>
         <li class="list__item">Item 2</li>
         <li class="list__item">Item 3</li>
@@ -37,6 +37,16 @@
         <li class="list__item">Item 1</li>
         <li class="list__item">Item 2</li>
         <li class="list__item">Item 3</li>
-    </ul>
+    </ul> -->
+
+    <span class="icon-container">
+        <svg class="icon icon--primary">
+            <use xlink:href="/images/sprite.svg#wordpress"></use>
+        </svg>
+    </span>
+
+      <svg class="icon">
+        <use xlink:href="/images/sprite.svg#computer"></use>
+      </svg>
 </body>
 </html>
