--- a/index.html
+++ b/index.html
@@ -12,41 +12,9 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Quis quibusdam placeat similique, consequuntur eaque doloremque earum dolor consectetur 
-        perspiciatis debitis ipsum saepe asperiores hic! Assumenda maiores a at sequi. A assumenda 
-        minima dolores eius delectus velit aperiam quis unde harum totam corporis officiis non 
-        soluta enim voluptate quisquam, quod saepe?
-    </p> -->
-    <!-- <a href="#" class="link-arrow">Learn more</a> -->
-
-
-    <!-- <span class="badge badge--primary">10% off</span>
-    <span class="badge badge--secondary badge--small">10% off</span> -->
-
-    <!-- <ul class="list list--inline">
-        <li class="list__item">Item 1</li>
-        <li class="list__item">Item 2</li>
-        <li class="list__item">Item 3</li>
-    </ul>
-
-    <ul class="list list--tick">
-        <li class="list__item">Item 1</li>
-        <li class="list__item">Item 2</li>
-        <li class="list__item">Item 3</li>
-    </ul> -->
-
-    <span class="icon-container">
-        <svg class="icon icon--primary">
-            <use xlink:href="/images/sprite.svg#wordpress"></use>
-        </svg>
-    </span>
-
-      <svg class="icon">
-        <use xlink:href="/images/sprite.svg#computer"></use>
-      </svg>
+    <button class="btn btn--primary btn--block">Buy Now</button>
+    <button class="btn btn--secondary btn--block">Buy Now</button>
+    <a href="#" class="btn btn--accent btn--block">Buy Now</a>
+    <a href="#" class="btn btn--outline btn--block">Buy Now</a>
 </body>
 </html>
