--- a/index.html
+++ b/index.html
@@ -12,9 +12,29 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="btn btn--primary btn--block">Buy Now</button>
-    <button class="btn btn--secondary btn--block">Buy Now</button>
-    <a href="#" class="btn btn--accent btn--block">Buy Now</a>
-    <a href="#" class="btn btn--outline btn--block">Buy Now</a>
+    <!-- <div class="input-group">
+        <span class="icon-container">
+            <svg class="icon icon--primary">
+                <use xlink:href="/images/sprite.svg#wordpress"></use>
+            </svg>
+        </span>
+        <input type="text" class="input" placeholder="Please enter your domain here...">
+    </div> -->
+    <div style="width: 30%">
+        <div class="card">
+            <header class="card__header card--primary">Card Title</header>
+            <div class="card__body">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi quo et sapiente assumenda perferendis odio sint repellendus eos optio laudantium.
+            </div>
+        </div>
+    </div>
+    <div style="width: 30%">
+        <div class="card">
+            <header class="card__header card--secondary">Card Title</header>
+            <div class="card__body">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi quo et sapiente assumenda perferendis odio sint repellendus eos optio laudantium.
+            </div>
+        </div>
+    </div>
 </body>
 </html>
