--- a/index.html
+++ b/index.html
@@ -6,35 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <!-- <div class="input-group">
-        <span class="icon-container">
-            <svg class="icon icon--primary">
-                <use xlink:href="/images/sprite.svg#wordpress"></use>
-            </svg>
-        </span>
-        <input type="text" class="input" placeholder="Please enter your domain here...">
-    </div> -->
-    <div style="width: 30%">
-        <div class="card">
-            <header class="card__header card--primary">Card Title</header>
-            <div class="card__body">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi quo et sapiente assumenda perferendis odio sint repellendus eos optio laudantium.
-            </div>
-        </div>
-    </div>
-    <div style="width: 30%">
-        <div class="card">
-            <header class="card__header card--secondary">Card Title</header>
-            <div class="card__body">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi quo et sapiente assumenda perferendis odio sint repellendus eos optio laudantium.
-            </div>
-        </div>
-    </div>
+   
+
 </body>
 </html>
