Define collapsible component

--- a/index.html
+++ b/index.html
@@ -13,6 +13,39 @@
 </head>
 <body>
    
+    <section class="block container">
+        <div class="block__header">
+            <h2 class="block__heading">Heading</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet quasi debitis laboriosam, velit numquam aliquid delectus explicabo saepe inventore ipsum.</p>
+        </div>
+        <div class="card">
+            <header class="card__header">Card Title</header>
+            <div class="card__body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, aliquid.
+            </div>
+        </div>
+    </section>
+   
+    <section class="block block--dark block--skewed-left">
+        <div class="container">
+            <div class="block__header">
+                <h2 class="block__heading">Heading</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet quasi debitis laboriosam, velit numquam aliquid delectus explicabo saepe inventore ipsum.</p>
+            </div>
+            <div class="media">
+                <div class="media__image">
+                    <svg class="icon icon--primary">
+                        <use xlink:href="/images/sprite.svg#snap"></use>
+                    </svg>
+                </div>
+                <div class="media__body">
+                    <h3 class="media__title">Easy start and manage updates</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam alias error laboriosam impedit inventore cupiditate recusandae nesciunt eos ipsam molestias est voluptatum, doloremque aspernatur maiores vel optio autem ratione eum asperiores nisi animi aliquid enim! Aperiam id dignissimos quidem architecto at ab cumque in aspernatur consequuntur incidunt nihil, error molestias.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <script src="js/main.js"></script>
 </body>
 </html>
